# tailscale

./: .editorconfig  .env.example  .gitignore  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  README.md  opencode.jsonc  pyproject.toml  release-please-config.json  ruff.toml
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: pytest.yml  release-please.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
backlog/: config.yml
backlog/tasks/: task-001 - Add-SSH-and-network-grant-for-shared-user-to-Synology-NAS.md  task-002 - Add-default-None-values-to-Optional-model-fields.md  task-003 - Add-missing-Tailscale-API-fields-to-Device-and-ClientConnectivity-models.md
docs/: architecture.md  style.md  testing.md
examples/: devices.py  fix_nas_grant.py
src/tailscale/: __init__.py  models.py  tailscale.py
tests/: conftest.py  test_e2e.py  test_hypothesis.py  test_integration.py  test_unit.py
typings/: decouple.pyi
