[project]
name = "tailscale"
version = "0.7.0"
description = "Asynchronous client for the Tailscale API."
authors = [{ name = "Franck Nijhof", email = "opensource@frenck.dev" }]
maintainers = [
    { name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" }
]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"

dependencies = [
    "aiohttp>=3.0.0",
    "mashumaro>=3.10",
    "orjson>=3.9.8",
    "python-decouple>=3.8",
    "yarl>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/pythoninthegrasses/tailscale"
Repository = "https://github.com/pythoninthegrasses/tailscale"
Issues = "https://github.com/pythoninthegrasses/tailscale/issues"

[dependency-groups]
dev = [
    "aresponses==3.0.0",
    "codespell==2.4.2",
    "covdefaults==2.3.0",
    "coverage[toml]==7.13.5",
    "mypy==1.20.1",
    "pylint==4.0.5",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest==9.0.3",
    "hypothesis==6.151.14",
    "ruff==0.12.11",
    "safety==3.7.0",
    "yamllint==1.38.0",
]

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that hit the real Tailscale API",
]

[tool.coverage.run]
source = ["src/tailscale"]

[tool.mypy]
mypy_path = "typings"

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"
